--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script src="//dhis2-cdn.org/resources/jquery-2.2.4.min.js"></script>
+    <script src="//dhis2-cdn.org/v228/plugin/reporttable.js"></script>
+    <script src="//dhis2-cdn.org/v228/plugin/chart.js"></script>
+
     <title>React App</title>
   </head>
   <body>
